--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -1365,7 +1365,8 @@ paths:
       summary: Retrieve a Care Team
       description:
         Retrieves the details of an existing care team. You need only supply the unique care team
-        identifier that was returned upon creation.
+        identifier that was returned upon creation, or that is associated with a particular member
+        (see the `care_team` property in the [Member](/docs/api/reference/member/) object).
       tags:
         - Care Team
       parameters:
