--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -3751,7 +3751,7 @@ paths:
                   description:
                     The task definition that this task models. You may provide either the definition
                     ID or key.
-                  example: tskd_vlTxSr3ldEgbgX0RiQSk
+                  example: tskd_2Lc2yr7YIYxfN3RCSlBU
                 member:
                   type: string
                   description: The member to which this task belongs.
@@ -4192,13 +4192,12 @@ paths:
                   example: Medication Request
                 care_team_role:
                   type: string
-                  minLength: 1
+                  example: ctr_Xrjh23QoCKx0PxrIOoou
                   nullable: true
                   description:
                     The ID of the care team role that tasks should be assigned to be default. If no
                     role is set on the task definition, any tasks created without explicit
                     assignment will remain unassigned.
-                  example: ctr_iNGhmxf28QqEstlwzxWK
               required:
                 - key
                 - name
@@ -4269,6 +4268,25 @@ paths:
           required: false
           description:
             A limit on the number of objects to be returned. Limit can range between 1 and 100.
+        - in: query
+          style: form
+          explode: true
+          name: sort
+          schema:
+            type: string
+            enum:
+              - created_at
+              - name
+              - -created_at
+              - -name
+            description:
+              Sort field for the results. A '-' prefix indicates sorting by that field in descending
+              order, otherwise the order will be ascending.
+            example: created_at
+          required: false
+          description:
+            Sort field for the results. A '-' prefix indicates sorting by that field in descending
+            order, otherwise the order will be ascending.
       responses:
         default:
           description: Successful response.
@@ -4339,13 +4357,12 @@ paths:
                   example: Medication Request
                 care_team_role:
                   type: string
-                  minLength: 1
+                  example: ctr_Xrjh23QoCKx0PxrIOoou
                   nullable: true
                   description:
                     The ID of the care team role that tasks should be assigned to be default. If no
                     role is set on the task definition, any tasks created without explicit
                     assignment will remain unassigned.
-                  example: ctr_iNGhmxf28QqEstlwzxWK
       responses:
         default:
           description: Successful response.
@@ -7358,7 +7375,7 @@ components:
           x-expandable:
             $ref: "#/components/schemas/task_definition"
           description: The type of task that needs to be completed.
-          example: tskd_vlTxSr3ldEgbgX0RiQSk
+          example: tskd_2Lc2yr7YIYxfN3RCSlBU
         member:
           oneOf:
             - type: string
@@ -7493,8 +7510,8 @@ components:
           description: Always `task_definition`.
         id:
           type: string
-          description: Unique ID of the task definition.
-          example: tskd_vlTxSr3ldEgbgX0RiQSk
+          example: tskd_2Lc2yr7YIYxfN3RCSlBU
+          description: Unique ID for the Task Definition.
         key:
           type: string
           description:
@@ -7513,7 +7530,7 @@ components:
           description:
             The default care team role that tasks should be assigned to. If no role is set on the
             task definition, any tasks created without explicit assignment will remain unassigned.
-          example: ctr_iNGhmxf28QqEstlwzxWK
+          example: ctr_Xrjh23QoCKx0PxrIOoou
           nullable: true
         created_at:
           type: string
