--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -7281,6 +7281,14 @@ components:
           format: date-time
           description: Timestamp when the group was last updated.
           example: 2021-05-13T16:33:00.000Z
+        deleted_at:
+          type: string
+          format: date-time
+          description:
+            Timestamp when the group was deleted, which is only present for deleted groups. Deleted
+            groups are not typically returned by the API, however they are returned in
+            `group.deleted` events and expanded references on other objects.
+          example: 2021-05-13T16:33:00.000Z
       required:
         - object
         - id
@@ -8122,6 +8130,14 @@ components:
           type: string
           format: date-time
           description: Timestamp when the queue was last updated.
+          example: 2021-05-13T16:33:00.000Z
+        deleted_at:
+          type: string
+          format: date-time
+          description:
+            Timestamp when the queue was deleted, which is only present for deleted queues. Deleted
+            queues are not typically returned by the API, however they are returned in
+            `queue.deleted` events and expanded references on other objects.
           example: 2021-05-13T16:33:00.000Z
       required:
         - object
