Pushing v94 from API 05a52ec8009e88c24b10109198a6667823ab1389

--- a/openapi/spec3.yml
+++ b/openapi/spec3.yml
@@ -4415,8 +4415,7 @@ paths:
                   format: date-time
                   description:
                     The time by which this task should be completed. If no due_at date is supplied,
-                    the due_at date will automatically be 24 hours after the task was created. The
-                    due_at date must be in the future.'
+                    the due_at date will automatically be 24 hours after the task was created.'
                   example: 2021-05-13T16:33:00.000Z
                 related:
                   type: array
@@ -4742,8 +4741,7 @@ paths:
                   format: date-time
                   description:
                     The time by which this task should be completed. If no due_at date is supplied,
-                    the due_at date will automatically be 24 hours after the task was created. The
-                    due_at date must be in the future.'
+                    the due_at date will automatically be 24 hours after the task was created.'
                   example: 2021-05-13T16:33:00.000Z
                 related:
                   type: array
